docs(api): add root OpenAPI file and Swagger UI docker setup

--- a/tools/docker/docker-compose.yml
+++ b/tools/docker/docker-compose.yml
@@ -30,6 +30,17 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  
+  swagger-ui:
+    image: swaggerapi/swagger-ui:v5.17.14
+    container_name: appointment-booking-swagger
+    ports:
+      - "8080:8080"
+    volumes:
+      - ../../docs/api:/usr/share/nginx/html/api:ro
+    environment:
+      SWAGGER_JSON: /usr/share/nginx/html/api/openapi.yaml
+    restart: unless-stopped
 
 volumes:
   postgres_data:
